<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">
    <ImageView
        android:id="@+id/iv_add_image"
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/default_image"
        android:src="@drawable/upload_image" />

        <LinearLayout
            android:id="@+id/ll_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_add_image"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_load_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:text="@string/load_image"
                android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_capture_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:visibility="gone"
            android:background="@color/teal_700"
            android:text="@string/capture_image"
            android:textColor="@color/white"/>
        />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_button"
            android:layout_margin="10dp"
            android:orientation="vertical">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/output"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tv_result"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/result"
                    android:textColor="@color/teal_700"
                    android:textSize="20sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/search_google"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/click_to_search"
                android:textSize="12sp">

            </TextView>

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>